--- a/frontEnd/htmlworks/facebook.html
+++ b/frontEnd/htmlworks/facebook.html
@@ -15,9 +15,9 @@
     <br>
     <label for="">Facebook helps you to connect and share with the people in your life </label><br>
 
-    <input type="text">
+    <input type="text" placeholder="username">
     <br>
-    <input type="Password">
+    <input type="Password" placeholder="Password">
     <br>
     <button type="submit"> Log in</button><br>
     <a href="#">Forgotten password?</a> <br>
@@ -29,4 +29,4 @@
 
 </body>
 
-</html>
+</html> 
