--- a/frontEnd/CSSworks/flex/flexbox.html
+++ b/frontEnd/CSSworks/flex/flexbox.html
@@ -10,6 +10,25 @@
 </head>
 
 <body>
+<header>
+    <div class="container">
+ <a href="">Logo</a>
+ <nav>
+ <a href="">Home</a>
+ <a href="">About</a>
+ <a href="">Contact</a>
+ <a href="">Gallery</a>
+
+
+ </nav>
+
+    </div>
+</header>
+
+
+
+
+
     <!-- flex -->
     <!-- 1-D align -->
     <!-- used to give positions -->
@@ -22,6 +41,10 @@
         <div class="col"></div>
         <div class="col"></div>
 
+    </div>
+    <div class="section">
+
+        <input type="text" placeholder="enter name">
     </div>
 
     
