--- a/frontEnd/CSSworks/book/book.html
+++ b/frontEnd/CSSworks/book/book.html
@@ -11,23 +11,27 @@
 
 <body>
     <header>
-  <div class="container">
+        <div class="container">
+            <a href="">Logo</a>
+            <nav>
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+                <a href="">Gallery</a>
 
-    <a href ="">Logo</a>
-    <nav>
-         <a href>Home </a>
-        <a href> About</a>
-        <a href> Contact</a>
-        <a href>Gallery </a>
-    </nav>
-  </div>
+
+            </nav>
+
+        </div>
+
     </header>
 
     <main class="main">
         <div class="row">
             <img src="https://upload.wikimedia.org/wikipedia/en/0/0e/The_Immortals_Of_Meluha.jpg" alt="">
+            <h3>The Immortals of Meluha</h3>
             <p>
-                The Immortals of Meluha is the first book of Amish Tripathi,first book of Amishverse, and also the 
+                The Immortals of Meluha is the first book of Amish Tripathi,first book of Amishverse, and also the
                 first book of Shiva Trilogy.The story is set in the land of Meluha and starts with the arrival
                 of the Shiva. The Meluhans believe that Shiva is their fabled saviour
                 Neelkanth. Shiva decides to help the Meluhans in their war against
@@ -40,6 +44,7 @@
 
         <div class="row">
             <img src="https://upload.wikimedia.org/wikipedia/en/c/c6/Half_Girlfriend.jpg" alt="">
+            <h3> Half Girlfriend</h3>
             <p>
                 Half Girlfriend is an Indian English coming of age, young adult
                 romance novel by Indian .. author Chetan Bhagat.
@@ -55,11 +60,13 @@
 
         <div class="row">
             <img src="https://m.media-amazon.com/images/I/51egYlYFpeL.jpg" alt="">
+            <h3> Rain Rising</h3>
             <p>
                 we watch a sensitive poet grapple with her physical universe
                 as also with ancestry and roots and the search for roots...
                 The raw material, as also the way she handles it are the essence
                 of poetry." - Keki N. Daruwalla Nirupama Menon Rao was born in Kerala and was raised in army cantonments
+                Keki N. Daruwalla Nirupama Menon Rao was b raised
 
             </p>
 
@@ -68,6 +75,7 @@
 
         <div class="row">
             <img src="https://images-na.ssl-images-amazon.com/images/I/61urB+bw1UL.jpg" alt="">
+            <h3>Romeo and Juliet</h3>
             <p>Romeo and Juliet is a tragedy written by William Shakespeare
                 early in his career about two young Italian star-crossed
                 lovers whose deaths ultimately reconcile their feuding
@@ -76,6 +84,73 @@
                 is one of his most frequently performed plays</p>
         </div>
     </main>
+
+
+    <main class="main main-1">
+        <div class="row">
+            <img src="https://upload.wikimedia.org/wikipedia/en/0/0e/The_Immortals_Of_Meluha.jpg" alt="">
+            <h3>The Immortals of Meluha</h3>
+            <p>
+                The Immortals of Meluha is the first book of Amish Tripathi,first book of Amishverse, and also the
+                first book of Shiva Trilogy.The story is set in the land of Meluha and starts with the arrival
+                of the Shiva. The Meluhans believe that Shiva is their fabled saviour
+                Neelkanth. Shiva decides to help the Meluhans in their war against
+                the Chandravanshis
+
+            </p>
+
+        </div>
+
+
+        <div class="row">
+            <img src="https://upload.wikimedia.org/wikipedia/en/c/c6/Half_Girlfriend.jpg" alt="">
+            <h3> Half Girlfriend</h3>
+            <p>
+                Half Girlfriend is an Indian English coming of age, young adult
+                romance novel by Indian .. author Chetan Bhagat.
+                The novel, set in rural Bihar, New Delhi, Patna,
+                and New York, is the story of a Bihari boy in quest
+                of winning over the girl he loves. This is Bhagat's
+                sixth novel which was released on 1 October 2014[4] by Rupa
+                Publications.
+
+
+            </p>
+        </div>
+
+        <div class="row">
+            <img src="https://m.media-amazon.com/images/I/51egYlYFpeL.jpg" alt="">
+            <h3> Rain Rising</h3>
+            <p>
+                we watch a sensitive poet grapple with her physical universe
+                as also with ancestry and roots and the search for roots...
+                The raw material, as also the way she handles it are the essence
+                of poetry." - Keki N. Daruwalla Nirupama Menon Rao was born in Kerala and was raised in army cantonments
+                Keki N. Daruwalla Nirupama Menon Rao was b raised
+
+            </p>
+
+
+        </div>
+
+        <div class="row">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/61urB+bw1UL.jpg" alt="">
+            <h3>Romeo and Juliet</h3>
+            <p>Romeo and Juliet is a tragedy written by William Shakespeare
+                early in his career about two young Italian star-crossed
+                lovers whose deaths ultimately reconcile their feuding
+                families. It was among Shakespeare's most popular plays
+                during his lifetime and, along with Hamlet,
+                is one of his most frequently performed plays</p>
+        </div>
+    </main>
+
+
+
+
+
+
+
 
 </body>
 
