--- a/frontEnd/CSSworks/instagram/instagram.html
+++ b/frontEnd/CSSworks/instagram/instagram.html
@@ -9,5 +9,44 @@
 </head>
 <body>
     
+
+
+
+
+<div class="maincontent">
+<div class="header">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRp_hb4l2x2bJgZH5xtXi6u8j5-OfF7OuphM8l1Hbayw0GNWLV1vlGYknHN51iBw2bWTI&usqp=CAU" alt="">
+</div>
+
+<div class="part1">
+<input type="text" placeholder="Username,Phone number,Email id">
+</div>
+
+<div class="part2">
+    <input type="password" placeholder="Passsword">
+</div>
+
+</div>
+
+<div class="button"> 
+<input type="button" value="Log In"><br>
+</div>
+
+<div class="or">
+<label for="">OR</label><br>
+</div>
+
+<div class="forgot">
+<label for="">Login with Facebook</label><br>
+<label for="">Forgot Password?</label><br>
+</div>
+
+    <div class="sub-content">
+        <div class="sub part">
+  Don't have an account?<a href="#">Sign up</a>
+</div>
+   
+</div>
+
 </body>
 </html>
