--- a/frontEnd/bootstrapworks/luminarhome.html
+++ b/frontEnd/bootstrapworks/luminarhome.html
@@ -12,10 +12,16 @@
 <body>
     
 
-<div class="container border mt-2 ">
+
+<div class="container border border-2">
+
+
+
+    <!-- div class="container border text-success border-primary  -->
+    <!--  mt-2 -->
     <!-- mt-2 means 2% down -->
     <!-- border border-success text-success bg-dark -->
-<!-- primary,success -->
+<!-- primary-blue,success-green,warning-yellow,danger-red,secondary-grey -->
 <h1>Welcome</h1>
 
 </div>
