--- a/frontEnd/bootstrapworks/githublogin/git.html
+++ b/frontEnd/bootstrapworks/githublogin/git.html
@@ -40,7 +40,7 @@
                 twitter
                 Twitter is an American microblogging and social networking service on which users post and interact with
                 messages known as "tweets".
-                Registered users can post, like, and retweet tweets, but unregistered users can only read them.
+                Registered users can post, like, and retweet tweets, but unregistered users can only read them in all.
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12 border border-warning text-warning">
                <div class="row">
