--- a/frontEnd/bootstrapworks/githublogin/grid.html
+++ b/frontEnd/bootstrapworks/githublogin/grid.html
@@ -15,7 +15,7 @@
 <div class="container border bg-success">
     <div class="row">
    <div class="col-3">first </div>
-<div class="col-3">second</div>
+<div class="col-3">secondd</div>
 <div class="col-3">third</div>
 <div class="col-3">fourth</div>
     </div>
