--- a/frontEnd/bootstrapworks/moviegallery/moviegallery.html
+++ b/frontEnd/bootstrapworks/moviegallery/moviegallery.html
@@ -59,6 +59,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 <div class="container">
 <div class="row">
     <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <img src="https://upload.wikimedia.org/wikipedia/en/0/0e/The_Immortals_Of_Meluha.jpg" alt="">
         <h3>The Immortals of Meluha</h3>
             <p>
                 The Immortals of Meluha is the first book of Amish Tripathi,first book of Amishverse, and also the
@@ -70,6 +71,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
             </p>
     </div>
     <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <img src="https://upload.wikimedia.org/wikipedia/en/c/c6/Half_Girlfriend.jpg" alt="">
         <h3> Half Girlfriend</h3>
             <p>
                 Half Girlfriend is an Indian English coming of age, young adult
@@ -84,6 +86,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
             </p>
     </div>
     <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <img src="https://m.media-amazon.com/images/I/51egYlYFpeL.jpg" alt="">
         <h3> Rain Rising</h3>
             <p>
                 we watch a sensitive poet grapple with her physical universe
@@ -96,13 +99,14 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 
     </div>
     <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/61urB+bw1UL.jpg" alt="">
         <h3>Romeo and Juliet</h3>
             <p>Romeo and Juliet is a tragedy written by William Shakespeare
                 early in his career about two young Italian star-crossed
                 lovers whose deaths ultimately reconcile their feuding
                 families. It was among Shakespeare's most popular plays
                 during his lifetime and, along with Hamlet,
-                is one of his most frequently performed plays</p>
+                is one of his most frequently performed playss</p>
     </div>
 </div>
 
