--- a/frontEnd/bootstrapworks/moviegallery/moviegallery.html
+++ b/frontEnd/bootstrapworks/moviegallery/moviegallery.html
@@ -16,6 +16,13 @@
 background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
  }
 
+ 
+.row img{
+    width:120%;
+    height: 500px;
+    padding:40px;
+}
+
 
      
     /* .btn-grad {background-image: linear-gradient(to right, #2b5876 0%, #4e4376  51%, #2b5876  100%)}
@@ -64,9 +71,9 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
             <p>
                 The Immortals of Meluha is the first book of Amish Tripathi,first book of Amishverse, and also the
                 first book of Shiva Trilogy.The story is set in the land of Meluha and starts with the arrival
-                of the Shiva. The Meluhans believe that Shiva is their fabled saviour
-                Neelkanth. Shiva decides to help the Meluhans in their war against
-                the Chandravanshis
+                of the Shiva. The Meluhans believe that Shiva is their fabled saviour Neelkanth. Shiva decides to help
+                 the Meluhans in their war against
+        
 
             </p>
     </div>
