--- a/frontEnd/bootstrapworks/githublogin/github2.html
+++ b/frontEnd/bootstrapworks/githublogin/github2.html
@@ -52,7 +52,7 @@
                </div>
                 facebook
                 Facebook, Inc., is an American multinational conglomerate based in Menlo Park, California.
-                It was founded by Mark Zuckerberg, along with his fellow roommates and students at Harvard College, who
+                It was founded by Mark Zuckerberg, along with his fellow roommatess and students at Harvard College, who
                 were .
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12 border border-success text-success">
