--- a/frontEnd/bootstrapworks/moviegallery/moviegallery.html
+++ b/frontEnd/bootstrapworks/moviegallery/moviegallery.html
@@ -72,7 +72,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
                 The Immortals of Meluha is the first book of Amish Tripathi,first book of Amishverse, and also the
                 first book of Shiva Trilogy.The story is set in the land of Meluha and starts with the arrival
                 of the Shiva. The Meluhans believe that Shiva is their fabled saviour Neelkanth. Shiva decides to help
-                 the Meluhans in their war against
+                 the Meluhans in their war againstt
         
 
             </p>
