--- a/frontEnd/bootstrapworks/githublogin/grid.html
+++ b/frontEnd/bootstrapworks/githublogin/grid.html
@@ -17,7 +17,7 @@
    <div class="col-3">first </div>
 <div class="col-3">secondd</div>
 <div class="col-3">third</div>
-<div class="col-3">fourth</div>
+<div class="col-3">fourthh</div>
     </div>
 </div>
 
