--- a/frontEnd/bootstrapworks/luminarhome.html
+++ b/frontEnd/bootstrapworks/luminarhome.html
@@ -22,7 +22,7 @@
     <!-- mt-2 means 2% down -->
     <!-- border border-success text-success bg-dark -->
 <!-- primary-blue,success-green,warning-yellow,danger-red,secondary-grey -->
-<h1>Welcome</h1>
+<h1>Welcomee</h1>
 
 </div>
 
