--- a/frontEnd/bootstrapworks/moviegallery/moviegallery.html
+++ b/frontEnd/bootstrapworks/moviegallery/moviegallery.html
@@ -18,10 +18,15 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 
  
 .row img{
-    width:120%;
+    
+    /* width:120%;
     height: 500px;
-    padding:40px;
-}
+    padding:40px; */
+
+    width:97%;
+    height: 510px;
+    padding:15px; 
+} 
 
 
      
@@ -54,7 +59,7 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     <div class="row">
         <div class="col-4"></div>
         <div class="col-12 col-lg-4 col-md-3 col fs-md-2">
-            <h1 class ="text-white text-center"> Movie Gallery</h1>
+            <h1 class ="text-white text-center"> Book Gallery</h1>
         </div>
         <div class="col-4"></div>
     </div>
