--- a/frontEnd/bootstrapworks/luminar_works/index.html
+++ b/frontEnd/bootstrapworks/luminar_works/index.html
@@ -24,7 +24,7 @@
 
     <div class="container6 ">
         <div class="row">
-            <div class="col-lg-6 text-middle">+91 8086 651 651 contact@luminartechnolab.com</div>
+            <div class="col-lg-6 text-middle">+91 8086 651 652 contact@luminartechnolab.com</div>
         </div>
     </div>
 </header>
@@ -207,7 +207,7 @@
                             class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">MEARN Stack Web Development Expert- Angular & React</h5>
-                            <p class="card-text">HTML, CSS, Javascript, Bootstrap, Git, Typescript, MongoDB, Express.JS,
+                            <p class="card-text">HTML, CSS, Javascriptt, Bootstrap, Git, Typescript, MongoDB, Express.JS,
                                 Angular, React.js and Node.js.</p>
                             <a href="#" class="btn btn-primary">VIEW MORE</a>
                         </div>
