added a new class

--- a/frontEnd/CSSworks/resume/index.html
+++ b/frontEnd/CSSworks/resume/index.html
@@ -69,7 +69,7 @@
           </li>
           <li>
             <span class="icons1"><i class="fa fa-minus" aria-hidden="true"></i></span>
-            <span class="text1">Team player&Individual giver</span>
+            <span class="text1">Team player&Individual</span>
           </li>
           <li>
             <span class="icons1"><i class="fa fa-minus" aria-hidden="true"></i></span>
@@ -94,7 +94,7 @@
         <ul>
           <li>
             <span class="icons2"><i class="fa fa-minus" aria-hidden="true"></i></span>
-            <span class="text2">Date of Birth : 25-03-1999</span>
+            <span class="text2">Date of Birth : 25-03-1998</span>
           </li>
           <li>
             <span class="icons2"><i class="fa fa-minus" aria-hidden="true"></i></span>
@@ -211,12 +211,12 @@
           </li>
           <li>
             <h5>ST.THOMAS HIGHER SECONDARY SCHOOL PUNALUR [2014-2016] </h5>
-            <h4>Plus Two | 86%</h4>
+            <h4>Plus Two | 82%</h4>
             <h4>Kerala Higher Secondary Examination Board </h4>
           </li>
           <li>
             <h5>SABARIGIRI SENIOR SECONDARY SCHOOL PUNALUR [2013-2014]</h5>
-            <h4>Tenth | 86%</h4>
+            <h4>Tenth | 82%</h4>
             <h4>Board of Public Examination</h4>
           </li>
         </ul>
