--- a/frontEnd/bootstrapworks/review/rev.html
+++ b/frontEnd/bootstrapworks/review/rev.html
@@ -14,16 +14,16 @@
 
 <div class="row">
 <div class="col">
-    <h3>first</h3>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ipsum illum, corrupti a repellendus aspernatur sit praesentium nostrum minus explicabo, et recusandae atque nihil tempora animi neque fuga debitis numquam!
+    <h3>firstt</h3>
+Lorem ipsum dolor sit amett consectetur adipisicing elit. Vel ipsum illum, corrupti a repellendus aspernatur sit praesentium nostrum minus explicabo, et recusandae atque nihil tempora animi neque fuga debitis numquam!
 </div>
 <div class="col">
     <h3>second</h3>
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus voluptas dignissimos beatae quis, blanditiis vitae esse excepturi non ducimus aperiam porro vero numquam ratione architecto eveniet. Harum dignissimos laudantium consectetur.
+Lorem, ipsum dolor sit amet consecteturs adipisicing elit. Minus voluptas dignissimos beatae quis, blanditiis vitae esse excepturi non ducimus aperiam porro vero numquam ratione architecto eveniet. Harum dignissimos laudantium consectetur.
 </div>
 <div class="col">
     <h3>third</h3>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore sed assumenda quam numquam accusantium in aliquid nulla illo eaque iste dolor maxime incidunt, quisquam praesentium dolores veritatis ducimus ipsum doloribus!
+    Lorem ipsum dolork sit amet consectetur adipisicing elit. Inventore sed assumenda quam numquam accusantium in aliquid nulla illo eaque iste dolor maxime incidunt, quisquam praesentium dolores veritatis ducimus ipsum doloribus!
 </div>
 </div>
 
