--- a/frontEnd/bootstrapworks/Bootstrap/bootstrap.html
+++ b/frontEnd/bootstrapworks/Bootstrap/bootstrap.html
@@ -47,7 +47,7 @@
                 <a class="nav-link text-white" href="#">Themes</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link text-white" href="#">Blog</a>
+                <a class="nav-link text-white" href="#">Blogg</a>
               </li>
             
             </ul>
